fixed spacing with top nav

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 14px;
 	height:100%;
+	margin-left:0;
 }
 
 h1 {
@@ -92,7 +93,8 @@ nav{
 	position:fixed;
 	width:100%;
 	top:0;
-	padding-left:1em;
+	margin-left:0;
+	padding-left:0.25em;
 
 }
 
